fix uneven sizes

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
   overflow: hidden;
   margin: 1rem;
-  width: 250px;
+  width: 200px;
 }
 
 .movie img {
